--- a/gh-pages/_layouts/page.html
+++ b/gh-pages/_layouts/page.html
@@ -18,8 +18,8 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li {% if page.title == "{{ site.name }}" %}class="active"{% endif %}><a href="//{{ site.domain }}/{{ site.name }}">Home</a></li>
-          <!--li {% if page.title == "Api" %}class="active"{% endif %}><a href="//{{ site.domain }}/{{ site.name }}/api">Api</a></li>
-          <li {% if page.title == "Examples" %}class="active"{% endif %}><a href="//{{ site.domain }}/{{ site.name }}/examples">Examples</a></li-->
+          <li {% if page.title == "API" %}class="active"{% endif %}><a href="//{{ site.domain }}/{{ site.name }}/api">API Docs</a></li>
+          <!--li {% if page.title == "Examples" %}class="active"{% endif %}><a href="//{{ site.domain }}/{{ site.name }}/examples">Examples</a></li-->
           <li><a href="https://github.com/fibo/{{ site.name }}">GitHub</a></li>
           <li><a href="https://www.npmjs.com/package/{{ site.name }}">npm</a></li>
         </ul>
