--- a/gh-pages/_layouts/page.html
+++ b/gh-pages/_layouts/page.html
@@ -1,3 +1,4 @@
+{% assign package = site.data.package %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,15 +14,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="//{{ site.domain }}/{{ site.name }}">{{ site.name }}</a>
+        <a class="navbar-brand" href="//{{ site.domain }}/{{ package.name }}">{{ package.name }}</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li {% if page.title == "{{ site.name }}" %}class="active"{% endif %}><a href="//{{ site.domain }}/{{ site.name }}">Home</a></li>
-          <li {% if page.title == "API" %}class="active"{% endif %}><a href="//{{ site.domain }}/{{ site.name }}/api">API Docs</a></li>
+          <li {% if page.title == "{{ package.name }}" %}class="active"{% endif %}><a href="//{{ site.domain }}/{{ package.name }}">Home</a></li>
+          <li {% if page.title == "API" %}class="active"{% endif %}><a href="//{{ site.domain }}/{{ package.name }}/api">API Docs</a></li>
           <!--li {% if page.title == "Examples" %}class="active"{% endif %}><a href="//{{ site.domain }}/{{ site.name }}/examples">Examples</a></li-->
-          <li><a href="https://github.com/fibo/{{ site.name }}">GitHub</a></li>
-          <li><a href="https://www.npmjs.com/package/{{ site.name }}">npm</a></li>
+          <li><a href="https://github.com/fibo/{{ package.name }}">GitHub</a></li>
+          <li><a href="https://www.npmjs.com/package/{{ package.name }}">npm</a></li>
         </ul>
       </div>
     </div>
