--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
-<!-- _includes/bootstrap/footer.html start -->
+<!-- _includes/footer.html start -->
 
-<script type="text/javascript" src="//{{ site.domain }}/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="//{{ site.domain }}/js/bootstrap-select.min.js"></script>
+  <script type="text/javascript" src="//g14n.info/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-<!-- _includes/bootstrap/footer.html end -->
+<!-- _includes/footer.html end -->
