--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- _includes/header.html start -->
 {% assign package = site.data.package %}
 
-<meta charset="{{ site.encoding }}">
+<meta charset="utf-8">
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -13,9 +13,9 @@
 
 <title>{{ page.title }}</title>
 
-<link rel="stylesheet" href="//{{ site.domain }}/css/bootstrap.min.css">
-<link rel="stylesheet" href="//{{ site.domain }}/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="//g14n.info/bower_components/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="//g14n.info/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
 
-<script type="text/javascript" src="//{{ site.domain }}/js/jquery.min.js"></script>
+<script type="text/javascript" src="//g14n.info/bower_components/jquery/dist/jquery.min.js"></script>
 
 <!-- _includes/header.html end -->
