--- a/gh-pages/_includes/header.html
+++ b/gh-pages/_includes/header.html
@@ -18,4 +18,7 @@
 
 <script type="text/javascript" src="//g14n.info/bower_components/jquery/dist/jquery.min.js"></script>
 
+<link rel="stylesheet" href="//g14n.info/{{ package.name }}/bower_components/katex/dist/katex.min.css">
+<link rel="stylesheet" href="//dev.g14n.info:4000/bower_components/katex/dist/katex.min.css">
+
 <!-- _includes/header.html end -->
