--- a/gh-pages/_layouts/post.html
+++ b/gh-pages/_layouts/post.html
@@ -8,8 +8,18 @@
 {% include navbar.html %}
 
   <div class="container">
+    <article>
+      <header class="page-header">
+        <h1> {{ page.title }}  </h1>
 
-    {{ content }}
+        <p class="lead">{{ page.description }}</p>
+
+        <time datetime="{{ page.date }}" class="badge">{{ page.date | date: "%F" }}</time>
+      </header>
+
+      {{ content }}
+
+    </article>
 
   </div>
 
