--- a/gh-pages/_includes/header.html
+++ b/gh-pages/_includes/header.html
@@ -18,6 +18,6 @@
 
 <script type="text/javascript" src="//g14n.info/bower_components/jquery/dist/jquery.min.js"></script>
 
-<link rel="stylesheet" href="//g14n.info/{{ package.name }}/bower_components/katex/dist/katex.min.css">
+<link rel="stylesheet" href="//g14n.info/bower_components/katex/dist/katex.min.css">
 
 <!-- _includes/header.html end -->
