fixed katex rendering

--- a/gh-pages/_includes/header.html
+++ b/gh-pages/_includes/header.html
@@ -13,11 +13,8 @@
 
 <title>{{ page.title }}</title>
 
-<link rel="stylesheet" href="//g14n.info/bower_components/bootstrap/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="//g14n.info/bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="{{ site.bootstrap.basepath  }}/{{ site.bootstrap.version  }}/css/bootstrap.min.css">
 
-<script type="text/javascript" src="//g14n.info/bower_components/jquery/dist/jquery.min.js"></script>
-
-<link rel="stylesheet" href="//g14n.info/bower_components/katex/dist/katex.min.css">
+<link rel="stylesheet" href="{{ site.katex.basepath }}/{{ site.katex.version }}/katex.min.css">
 
 <!-- _includes/header.html end -->
