--- a/gh-pages/_includes/footer.html
+++ b/gh-pages/_includes/footer.html
@@ -1,5 +1,7 @@
 <!-- _includes/footer.html start -->
 
-  <script type="text/javascript" src="//g14n.info/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="{{ site.jquery.basepath }}/{{ site.jquery.version }}/jquery.min.js"></script>
+
+<script src="{{ site.bootstrap.basepath }}/{{ site.bootstrap.version }}/js/bootstrap.min.js"></script>
 
 <!-- _includes/footer.html end -->
